# docs/swagger.yaml
@@ -116,6 +116,32 @@ paths:
       summary: Show Post Details
       tags:
       - posts
+    put:
+      consumes:
+      - application/json
+      description: Update a post with the input payload
+      parameters:
+      - description: post id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/models.Post'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Post'
+      summary: Update a Post
+      tags:
+      - posts
   /users:
     get:
       consumes:
